--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,5 +1,7 @@
-Classroom Info
-<p>
-<%= @classroom.course_name %>
-<%= @classroom.semester %>
-</p>
+<%= render partial: 'classroom' %>
+
+<% Classroom.all.each do |c| %>
+<% c.students.each do |s| %>
+    <%= render partial: "students/student", locals: {student: s} %>
+    <% end %>
+    <% end %>
